# gbcpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  CpuCore.cpp  CpuCore.hpp  CpuRegisters.hpp  CpuState.cpp  CpuState.hpp  IInstruction.cpp  IInstruction.hpp  InstructionDecoder.hpp  RandomAccessMemory.hpp  Reg16Bit.hpp  gbcpp.hpp  main.cpp  types.hpp
src/Sound/: CMakeLists.txt
src/cart/: CMakeLists.txt  cart.hpp  ram_loader.hpp  rom_loader.hpp
src/cart/mbc/: mbc.hpp  mbc0.hpp  mbc_factory.cpp  mbc_factory.hpp
src/cpu/: CMakeLists.txt  cpu_core.cpp  cpu_core.hpp  cpu_registers.cpp  cpu_registers.hpp  cpu_state.cpp  cpu_state.hpp  reg_16bit.hpp
src/cpu/instructions/: instruction.cpp  instruction.hpp  instruction_decoder.cpp  instruction_decoder.hpp
src/cpu/instructions/arithmetic/: adca_hl_.hpp  adcad8.hpp  adcar8.hpp  adda_hl_.hpp  addad8.hpp  addar8.hpp  addhlr16.hpp  addsps8.hpp  cpa_hl_.hpp  cpad8.hpp  cpar8.hpp  dec_hl_.hpp  decr16.hpp  decr8.hpp  inc_hl_.hpp  incr16.hpp  incr8.hpp  sbca_hl_.hpp  sbcad8.hpp  sbcar8.hpp  suba_hl_.hpp  subad8.hpp  subar8.hpp
src/cpu/instructions/bit/: bitn_hl_.hpp  bitnr8.hpp  resn_hl_.hpp  resnr8.hpp  setn_hl_.hpp  setnr8.hpp
src/cpu/instructions/controlflow/: CALL.hpp  call.hpp  callcc.hpp  jpcc.hpp  jpd16.hpp  jphl.hpp  jr.hpp  jrcc.hpp  ret.hpp  retcc.hpp  reti.hpp  rst.hpp
src/cpu/instructions/internal/: ldisr.hpp
src/cpu/instructions/load/: ld_bc_a.hpp  ld_d16_a.hpp  ld_d16_sp.hpp  ld_de_a.hpp  ld_hl_d8.hpp  ld_hl_r8.hpp  ld_hlm_a.hpp  ld_hlp_a.hpp  lda_bc_.hpp  lda_d16_.hpp  lda_de_.hpp  lda_hlm_.hpp  lda_hlp_.hpp  ldh_c_a.hpp  ldh_d8_a.hpp  ldha_c_.hpp  ldha_d8_.hpp  ldhlsps8.hpp  ldr16d16.hpp  ldr8_hl_.hpp  ldr8d8.hpp  ldr8r8.hpp  ldsphl.hpp
src/cpu/instructions/logic/: anda_hl_.hpp  andad8.hpp  andar8.hpp  ora_hl_.hpp  orad8.hpp  orar8.hpp  xora_hl_.hpp  xorad8.hpp  xorar8.hpp
src/cpu/instructions/misc/: ccf.hpp  cpl.hpp  daa.hpp  di.hpp  ei.hpp  halt.hpp  nop.hpp  pop.hpp  prefix.hpp  push.hpp  scf.hpp  stop.hpp
src/cpu/instructions/rotateshift/: rl_hl_.hpp  rla.hpp  rlc_hl_.hpp  rlca.hpp  rlcr8.hpp  rlr8.hpp  rr_hl_.hpp  rra.hpp  rrc_hl_.hpp  rrca.hpp  rrcr8.hpp  rrr8.hpp  sla_hl_.hpp  slar8.hpp  sra_hl_.hpp  srar8.hpp  srl_hl_.hpp  srlr8.hpp  swap_hl_.hpp  swapr8.hpp
src/memory/: CMakeLists.txt  ram.cpp  ram.hpp
src/ram/: CMakeLists.txt  ram.cpp  ram.hpp  ram_delegate.cpp  ram_delegate.hpp
src/sound/: CMakeLists.txt  OpenAL.cpp  OpenAL.hpp  open_al.cpp
src/timer/: timer.cpp  timer.hpp
src/video/: CMakeLists.txt  ppu.hpp  ppu_context.cpp  ppu_context.hpp
src/video/ppu_sm/: hblank.hpp  ppu_state.hpp
test/: CMakeLists.txt  RegisterTests.cpp  Test.hpp  mock.hpp  register_tests.cpp  test.hpp
test/cart/: CMakeLists.txt  mbc_tests.cpp
test/cpu/: CMakeLists.txt  cpucore_tests.cpp  cpustate_tests.cpp  instrdec_tests.cpp  register_tests.cpp
test/cpu/mocks/: cpustate_mock.hpp  instr_mock.hpp  instrdec_mock.hpp  ram_mock.hpp  registers_mock.hpp
test/ram/: CMakeLists.txt  ram_tests.cpp
test/ram/mocks/: delegate_mock.hpp
