include_directories(instructions)

add_library(cpu
    cpu_core.cpp 
    cpu_core.hpp 
    cpu_registers.cpp 
    cpu_registers.hpp
    cpu_state.cpp
    cpu_state.hpp
    reg_16bit.hpp
    instructions/instruction_decoder.cpp
    instructions/instruction_decoder.hpp
    instructions/instruction.cpp
    instructions/instruction.hpp
    
    instructions/arithmetic/adca_hl_.hpp
    instructions/arithmetic/adcad8.hpp
    instructions/arithmetic/adcar8.hpp
    instructions/arithmetic/adda_hl_.hpp
    instructions/arithmetic/addad8.hpp
    instructions/arithmetic/addar8.hpp
    instructions/arithmetic/addhlr16.hpp
    instructions/arithmetic/addsps8.hpp
    instructions/arithmetic/cpa_hl_.hpp
    instructions/arithmetic/cpad8.hpp
    instructions/arithmetic/cpar8.hpp
    instructions/arithmetic/dec_hl_.hpp
    instructions/arithmetic/decr8.hpp
    instructions/arithmetic/decr16.hpp
    instructions/arithmetic/inc_hl_.hpp
    instructions/arithmetic/incr8.hpp
    instructions/arithmetic/incr16.hpp
    instructions/arithmetic/sbca_hl_.hpp
    instructions/arithmetic/sbcad8.hpp
    instructions/arithmetic/sbcar8.hpp
    instructions/arithmetic/suba_hl_.hpp
    instructions/arithmetic/subad8.hpp
    instructions/arithmetic/subar8.hpp
    instructions/bit/bitn_hl_.hpp
    instructions/bit/bitnr8.hpp
    instructions/bit/resn_hl_.hpp
    instructions/bit/resnr8.hpp
    instructions/bit/setn_hl_.hpp
    instructions/bit/setnr8.hpp
    instructions/controlflow/call.hpp
    instructions/controlflow/callcc.hpp
    instructions/controlflow/jpcc.hpp
    instructions/controlflow/jpd16.hpp
    instructions/controlflow/jphl.hpp
    instructions/controlflow/jr.hpp
    instructions/controlflow/jrcc.hpp
    instructions/controlflow/ret.hpp
    instructions/controlflow/retcc.hpp
    instructions/controlflow/reti.hpp
    instructions/controlflow/rst.hpp
    instructions/internal/ldisr.hpp
    instructions/logic/anda_hl_.hpp
    instructions/logic/andad8.hpp
    instructions/logic/andar8.hpp
    instructions/logic/ora_hl_.hpp
    instructions/logic/orad8.hpp
    instructions/logic/orar8.hpp
    instructions/logic/xora_hl_.hpp
    instructions/logic/xorad8.hpp
    instructions/logic/xorar8.hpp
    instructions/misc/ccf.hpp
    instructions/misc/cpl.hpp
    instructions/misc/daa.hpp
    instructions/misc/di.hpp
    instructions/misc/ei.hpp
    instructions/misc/halt.hpp
    instructions/misc/nop.hpp
    instructions/misc/pop.hpp
    instructions/misc/prefix.hpp
    instructions/misc/push.hpp
    instructions/misc/scf.hpp
    instructions/misc/stop.hpp
    instructions/rotateshift/rrr8.hpp
)

target_link_libraries(cpu ram)